--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Introduction to the DOM Lab</title>
+    <script defer src="script.js"></script>
   </head>
   <body>
-    <!--Copy the lesson's example code here-->
+    <main id="app">
+      <ul class="ranked-list">
+        <li>1</li>
+        <li>2</li>
+      </ul>
+  
+      <ul class="ranked-list">
+        <li>10</li>
+        <li>11</li>
+      </ul>
   </body>
 </html>
